--- a/AlgFund 08.03.csproj
+++ b/AlgFund 08.03.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="MonsterMechanics.cs" />
     <Compile Include="MyGraphics.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
